namespaces/live.cloud-platform.service.justice.gov.uk/laa-data-claims-event-service-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-data-claims-event-service-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-data-stewardship-payments"
    cloud-platform.justice.gov.uk/application: "Claims events service"
    cloud-platform.justice.gov.uk/owner: "Data Stewardship (Payments): laa-dstew-payments@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-data-claims-event-service"
    cloud-platform.justice.gov.uk/team-name: "laa-data-stewardship-payments-team"
    cloud-platform.justice.gov.uk/review-after: ""
